fix: cancel waiver claim on mobile

--- a/app/views/components/player/player.styl
+++ b/app/views/components/player/player.styl
@@ -49,3 +49,7 @@
       background #fafafa
     .player__item-menu
       display flex
+
+@media (pointer:coarse)
+  .player__item.waiver .player__item-menu
+    display flex
